test/tests/stages/9_functions/invalid_parse/trailing_comma_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  )
  {
  return
  identifier(a)
  +
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(4)
  )
  ;
  }
